--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <button id="btn">Click Me</button>
     </div>
 
-    <script src="/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
